# industrial-aiops

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish-image.yml  publish-mcp.yml
deploy/airgap/: compose.yaml
deploy/igel/: README.md  SUBMISSION.md
deploy/igel/app-recipe/: app.json
deploy/margo/: .dockerignore  Dockerfile  README.md  compose.yaml  cosign.pub  margo-application.yaml  margo.yaml  package.compose.yaml
deploy/margo/schema/: PROVENANCE.md  application-description.linkml.yaml
docs/: ADAPTERS.md  AIRGAP.md  BACKLOG.md  CCLINK.md  CHINA.md  ENERGY-SPINOUT.md  FOOTPRINT.md  GRAFANA.md  HLD.md  MARGO-ALIGNMENT.md  PREVIEW-VERIFICATION.md  RCA.md  ROADMAP.md  SKILLS-ROADMAP.md
iaiops/: __init__.py  doctor.py
iaiops/cli/: __init__.py  _common.py  _govern.py  _root.py  analytics.py  approve.py  audit.py  bacnet.py  baseline.py  compliance.py  diagnostics.py  dnp3.py  doctor.py  eip.py  ethercat.py  export.py  fins.py  hart.py  historian.py  iec104.py  iec61850.py  init.py  iolink.py  mc.py  metrics.py  modbus.py  mqtt.py  mtconnect.py  opcua.py  profinet.py  program.py  s7.py  secret.py
iaiops/connectors/: __init__.py
iaiops/connectors/bacnet/: __init__.py  ops.py  transport.py
iaiops/connectors/bas/: __init__.py  client.py  dialects.py  ops.py  transport.py
iaiops/connectors/dnp3/: __init__.py  driver.py  ops.py
iaiops/connectors/eip/: __init__.py  ops.py  transport.py
iaiops/connectors/ethercat/: __init__.py  ops.py  transport.py
iaiops/connectors/fins/: __init__.py  client.py  ops.py  transport.py
iaiops/connectors/hart/: __init__.py  codec.py  ops.py  transport.py
iaiops/connectors/iec104/: __init__.py  ops.py
iaiops/connectors/iec61850/: __init__.py  driver.py  ops.py
iaiops/connectors/ignition/: __init__.py  client.py  dialects.py  ops.py  transport.py
iaiops/connectors/iolink/: __init__.py  client.py  ops.py  transport.py
iaiops/connectors/mc/: __init__.py  cclink.py  ops.py  transport.py
iaiops/connectors/modbus/: __init__.py  byteorder.py  ops.py  templates.py  transport.py
iaiops/connectors/mtconnect/: __init__.py  ops.py
iaiops/connectors/opcua/: __init__.py  diagnostics.py  discovery.py  ops.py  transport.py
iaiops/connectors/profinet/: __init__.py  ops.py  transport.py
iaiops/connectors/s7/: __init__.py  ops.py  transport.py
iaiops/connectors/secsgem/: __init__.py  ops.py  transport.py
iaiops/connectors/sparkplug/: __init__.py  live.py  ops.py  transport.py
iaiops/core/: __init__.py
iaiops/core/brain/: __init__.py  _shared.py  alarm_flood.py  alias_store.py  analysis.py  asset_inventory.py  asset_model.py  baseline.py  baseline_store.py  changeover.py  clinical_facility.py  compliance.py  compliance_report.py  control_loop.py  dataquality.py  diagnostics.py  disinfection.py  downtime_copilot.py  energy.py  fleet.py  heat_exchanger.py  hvac.py  maintenance_log.py  monitor.py  oee.py  overview.py  pareto.py  pdm.py  pdm_features.py  pdm_math.py  pdm_patterns.py  pdm_rul.py  plc_visibility.py  pv.py  rca.py  rca_collect.py  rca_graph.py  rca_history.py  rca_weights.py  semantics.py  (+5 more)
iaiops/core/egress/: __init__.py  base.py  nats.py
iaiops/core/governance/: __init__.py  allowlist.py  approvals.py  audit.py  budget.py  decorators.py  evidence.py  forward.py  paths.py  patterns.py  policy.py  sanitize.py  undo.py
iaiops/core/llm/: __init__.py  base.py  ollama.py
iaiops/core/runtime/: __init__.py  bacnet_async.py  capabilities.py  config.py  connection.py  envelope.py  secretstore.py  session_factory.py  url_guard.py
iaiops/core/sink/: __init__.py  base.py  export.py  historian_read.py  influxdb.py  iotdb.py  prometheus.py  push.py  reader.py  sqlite_local.py  tdengine.py
mcp_server/: __init__.py  _shared.py  entrypoints.py  noegress.py  profiles.py  readonly.py  server.py  transport.py
mcp_server/tools/: alarm_tools.py  alias_store_tools.py  analysis_tools.py  asset_model_tools.py  asset_tools.py  bacnet_tools.py  bas_tools.py  baseline_tools.py  building_tools.py  clinical_tools.py  compliance_tools.py  diagnostics_tools.py  dnp3_tools.py  downtime_tools.py  egress_tools.py  eip_tools.py  ethercat_tools.py  export_tools.py  fab_tools.py  factory_tools.py  fins_tools.py  fleet_tools.py  hart_tools.py  historian_tools.py  iec104_tools.py  iec61850_tools.py  ignition_tools.py  iolink_tools.py  llm_tools.py  mc_tools.py  modbus_tools.py  monitor_tools.py  mtconnect_tools.py  oee_tools.py  opcua_tools.py  overview_tools.py  pdm_tools.py  plc_program_tools.py  process_tools.py  profinet_tools.py  (+6 more)
ot_aiops/: __init__.py  config.py  connection.py  doctor.py
ot_aiops/cli/: _root.py  ethercat.py  init.py
ot_aiops/ops/: ethercat_ops.py  overview.py
scripts/: margo_validate.sh
skills/iaiops/: SKILL.md
skills/iaiops-building/: SKILL.md
skills/iaiops-clinical/: SKILL.md
skills/iaiops-fab/: SKILL.md
skills/iaiops-factory/: SKILL.md
skills/iaiops-plcnext/: SKILL.md
skills/iaiops-process/: SKILL.md
skills/iaiops-renewables/: SKILL.md
skills/iaiops-warehouse/: SKILL.md
skills/iaiops-water/: SKILL.md
skills/ot-aiops/: SKILL.md
tests/: conftest.py  test_airgap_compose.py  test_alarm_cascade.py  test_alarm_flood.py  test_alarm_rationalization.py  test_alias_store.py  test_approval_tokens.py  test_asset.py  test_asset_model.py  test_audit_forward.py  test_audit_integrity.py  test_audit_param_sanitize.py  test_bacnet.py  test_bacnet_live.py  test_bas_dialect.py  test_bas_tools.py  test_baseline.py  test_binding_contracts.py  test_budget.py  test_capability_registry.py  test_change_limits.py  test_changeover.py  test_cli_audit.py  test_clinical_edition.py  test_clinical_facility.py  test_compliance.py  test_compliance_report.py  test_connection_manager.py  test_control_loop.py  test_dataquality.py  test_diagnostics.py  test_disinfection.py  test_dnp3.py  test_doctor.py  test_doctor_checks.py  test_downtime_copilot.py  test_effect_based_risk.py  test_egress_gate.py  test_egress_llm_tools.py  test_egress_nats.py  (+82 more)
(+14 files in other folders)
