[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iaiops"
version = "0.4.0"
description = "Governed, vendor-neutral OT data tap + intelligent troubleshooting for AI agents (OPC-UA / Modbus / S7comm / Mitsubishi MC / MTConnect / MQTT-Sparkplug / EtherNet-IP / EtherCAT) with a built-in governance harness (audit, budget, risk tiers, MOC) plus OEE, downtime, and asset-inventory analytics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "wei", email = "zhouwei008@gmail.com" }]
keywords = [
    "opc-ua", "modbus", "s7comm", "siemens", "mitsubishi", "mtconnect", "mqtt",
    "sparkplug", "uns", "ethernet-ip", "rockwell", "allen-bradley", "ethercat",
    "pysoem", "soem", "oee", "ot", "scada", "plc", "industrial", "ai-ops", "mcp",
]
dependencies = [
    "typer>=0.12,<1.0",
    "rich>=13.0,<16.0",
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
    "cryptography>=42.0",
    "mcp[cli]>=1.10,<2.0",
]

[project.optional-dependencies]
# Per-protocol extras. Every protocol client library is imported LAZILY (inside the
# connection session builders / connector ops), so the base package installs and
# imports without any of these — a site installs only the 1-2 protocols it runs:
#   pip install iaiops[opcua]        ·  pip install iaiops[opcua,modbus]
opcua = ["asyncua>=1.0,<2"]
modbus = ["pymodbus>=3.5,<4"]
s7 = ["pyS7>=2.8,<3"]
mc = ["pymcprotocol>=0.3,<1"]
eip = ["pycomm3>=1.2,<2"]
mtconnect = ["requests>=2.31,<3"]
sparkplug = ["paho-mqtt>=2.0,<3", "protobuf>=4.25,<8"]
# SECS/GEM (semiconductor / display fab equipment ↔ host over HSMS).
secsgem = ["secsgem>=0.3,<1"]
# EtherCAT needs Linux + root/CAP_NET_RAW + a dedicated NIC + real slaves and has
# NO software simulator (macOS unsupported) — hence optional like the rest.
ethercat = ["pysoem>=1.1,<2"]
# Convenience: install every connector (used for full installs and the test matrix).
all = [
    "asyncua>=1.0,<2",
    "pymodbus>=3.5,<4",
    "pyS7>=2.8,<3",
    "pymcprotocol>=0.3,<1",
    "pycomm3>=1.2,<2",
    "requests>=2.31,<3",
    "paho-mqtt>=2.0,<3",
    "protobuf>=4.25,<8",
    "secsgem>=0.3,<1",
    "pysoem>=1.1,<2",
]
# Per-industry edition bundles — install only the protocols a vertical runs, and
# matching the same-named IAIOPS_MCP profiles. (energy/building arrive with their
# signature protocols: IEC-104/DNP3/61850, BACnet.)
fab = ["iaiops[secsgem]", "iaiops[opcua]", "iaiops[s7]", "iaiops[modbus]"]
factory = [
    "iaiops[opcua]",
    "iaiops[modbus]",
    "iaiops[s7]",
    "iaiops[mc]",
    "iaiops[eip]",
    "iaiops[mtconnect]",
    "iaiops[sparkplug]",
    "iaiops[ethercat]",
]
process = ["iaiops[opcua]", "iaiops[modbus]"]

[dependency-groups]
dev = [
    "pytest>=8.0,<10.0",
    "ruff>=0.5,<1.0",
]

[project.scripts]
iaiops = "iaiops.cli:app"
iaiops-mcp = "mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["iaiops", "mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Vendored, machine-generated Eclipse Tahu Sparkplug B protobuf module — kept
# byte-for-byte as generated by protoc; never hand-edited, so exclude from lint.
extend-exclude = ["iaiops/connectors/sparkplug/sparkplug_b_pb2.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# Vendored governance harness — kept faithful to its source; the exception
# names (PolicyDenied/BudgetExceeded) and long lines are intentional.
"iaiops/core/governance/*.py" = ["E501", "N818"]
# MCP server files are reflected by FastMCP/Pydantic; PEP 604 unions (X | None)
# crash on older mcp/pydantic, so they intentionally use Optional[X].
"mcp_server/**/*.py" = ["UP007", "UP045"]
# The MCP entry keeps an explicit Python-version guard.
"iaiops/cli/_root.py" = ["UP036"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests (require a reachable OPC-UA server / Modbus device)",
]
