[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iaiops"
version = "0.7.0"
description = "Governed, vendor-neutral OT data tap + intelligent troubleshooting for AI agents (OPC-UA / Modbus / S7comm / Mitsubishi MC / MTConnect / MQTT-Sparkplug / EtherNet-IP / EtherCAT / SECS-GEM / PROFINET / IEC-104 / DNP3 / IEC-61850 / BACnet) with a built-in governance harness (audit, budget, risk tiers, MOC), an AI downtime root-cause copilot, plus OEE, downtime, and asset-inventory analytics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "wei", email = "zhouwei008@gmail.com" }]
keywords = [
    "opc-ua", "modbus", "s7comm", "siemens", "mitsubishi", "mtconnect", "mqtt",
    "sparkplug", "uns", "ethernet-ip", "rockwell", "allen-bradley", "ethercat",
    "pysoem", "soem", "secs-gem", "profinet", "iec-104", "dnp3", "iec-61850",
    "bacnet", "substation", "hvac", "oee", "ot", "scada", "plc", "industrial",
    "ai-ops", "mcp",
]
dependencies = [
    "typer>=0.12,<1.0",
    "rich>=13.0,<16.0",
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
    "cryptography>=42.0",
    "mcp[cli]>=1.10,<2.0",
]

[project.optional-dependencies]
# Per-protocol extras. Every protocol client library is imported LAZILY (inside the
# connection session builders / connector ops), so the base package installs and
# imports without any of these — a site installs only the 1-2 protocols it runs:
#   pip install iaiops[opcua]        ·  pip install iaiops[opcua,modbus]
opcua = ["asyncua>=1.0,<2"]
modbus = ["pymodbus>=3.5,<4", "pyserial>=3.5"]  # pyserial for Modbus-RTU (serial)
s7 = ["pyS7>=2.8,<3"]
mc = ["pymcprotocol>=0.3,<1"]
eip = ["pycomm3>=1.2,<2"]
mtconnect = ["requests>=2.31,<3"]
sparkplug = ["paho-mqtt>=2.0,<3", "protobuf>=4.25,<8"]
# SECS/GEM (semiconductor / display fab equipment ↔ host over HSMS).
secsgem = ["secsgem>=0.3,<1"]
# EtherCAT needs Linux + root/CAP_NET_RAW + a dedicated NIC + real slaves and has
# NO software simulator (macOS unsupported) — hence optional like the rest.
ethercat = ["pysoem>=1.1,<2"]
# PROFINET-DCP (read-only discovery/identify) — layer-2 raw sockets (root/admin/
# CAP_NET_RAW on the NIC on the PROFINET subnet); discovery only, no RT cyclic.
profinet = ["pnio-dcp>=1.1,<3"]
# Energy edition (read-only monitoring): substation / utility telecontrol.
# IEC 60870-5-104 (c104), DNP3 (pydnp3/opendnp3), IEC 61850 MMS (libiec61850 binding;
# needs the C library built). Preview — not yet validated against live RTUs/IEDs.
iec104 = ["c104>=2.0,<3"]
dnp3 = ["pydnp3>=0.1,<1"]
# IEC 61850 MMS: the driver targets the libiec61850 SWIG binding (procedural
# IedConnection_* API). That binding publishes on PyPI as 'pyiec61850' (1.5-series,
# pre-release alphas; linux-only manylinux wheels — the wheel bundles libiec61850).
# NB: the similarly-named 'iec61850' distribution is an UNRELATED async OOP client
# (Iec61850Client/IedConnection classes) whose surface the driver does NOT use —
# verified 2026-06-30 (pyiec61850 exposes IedConnection_create/_connect/_readObject;
# 'iec61850' exposes 0 of them). The pre-release alpha is pinned explicitly so the
# resolver accepts it. Symbol-verified in a linux container; still 待核实 against a
# live IED.
iec61850 = ["pyiec61850>=1.5.2a1,<2; platform_system == 'Linux'"]
# The platform marker keeps a non-linux `pip install iaiops[energy]` from failing
# wholesale on this linux-only wheel — the other energy protocols still install and
# iec61850 just no-ops off-linux (its lazy import raises a teaching error if used).
# Building edition (read-only facility/HVAC): BACnet/IP via BAC0 (over bacpypes3).
bacnet = ["BAC0>=2023.6,<2026"]
# Process edition (read-only): HART-IP process instrumentation. hart-protocol does
# the HART command codec (framing/parsing); the HART-IP UDP transport is in-tree
# (待核实). Pure-Python, cross-platform.
hart = ["hart-protocol>=2023.6,<2025"]
# 信创 / national time-series DB historian sinks (data egress to a domestic TSDB).
tdengine = ["taospy>=2.7,<3"]
iotdb = ["apache-iotdb>=1.0,<3"]
# Convenience: install every pip-installable connector (full installs + the test
# matrix). NOTE: the energy extras (c104 / pydnp3 / iec61850) are deliberately NOT
# in 'all' — iec61850 needs the libiec61850 C library built and pydnp3 builds a
# native ext, so they stay opt-in via their own extras / the 'energy' bundle.
all = [
    "asyncua>=1.0,<2",
    "pymodbus>=3.5,<4",
    "pyserial>=3.5",
    "pyS7>=2.8,<3",
    "pymcprotocol>=0.3,<1",
    "pycomm3>=1.2,<2",
    "requests>=2.31,<3",
    "paho-mqtt>=2.0,<3",
    "protobuf>=4.25,<8",
    "secsgem>=0.3,<1",
    "pysoem>=1.1,<2",
    "pnio-dcp>=1.1,<3",
    "BAC0>=2023.6,<2026",
]
# Per-industry edition bundles — install only the protocols a vertical runs, and
# matching the same-named IAIOPS_MCP profiles. (energy/building arrive with their
# signature protocols: IEC-104/DNP3/61850, BACnet.)
fab = ["iaiops[secsgem]", "iaiops[opcua]", "iaiops[s7]", "iaiops[modbus]"]
factory = [
    "iaiops[opcua]",
    "iaiops[modbus]",
    "iaiops[s7]",
    "iaiops[mc]",
    "iaiops[eip]",
    "iaiops[mtconnect]",
    "iaiops[sparkplug]",
    "iaiops[ethercat]",
    "iaiops[profinet]",
]
process = ["iaiops[opcua]", "iaiops[modbus]", "iaiops[hart]"]
# Energy edition: substation / utility telecontrol (matches the IAIOPS_MCP=energy
# profile). iec61850 needs libiec61850 built — see its extra's note.
energy = ["iaiops[iec104]", "iaiops[dnp3]", "iaiops[iec61850]", "iaiops[modbus]",
          "iaiops[opcua]"]
# Building edition: facility / HVAC / 厂务 (matches IAIOPS_MCP=building).
building = ["iaiops[bacnet]", "iaiops[modbus]", "iaiops[opcua]"]
# 信创 / China entry: domestic TSDB historian sinks (compliance mapping is built-in).
xinchuang = ["iaiops[tdengine]", "iaiops[iotdb]"]

[dependency-groups]
dev = [
    "pytest>=8.0,<10.0",
    "ruff>=0.5,<1.0",
]

[project.scripts]
iaiops = "iaiops.cli:app"
iaiops-mcp = "mcp_server.server:main"
# Convenience named entry points — sugar over IAIOPS_MCP=<name> iaiops-mcp. Each
# targets a data-driven shim in mcp_server.entrypoints (kept in sync with the
# PROTOCOL_MODULES / NAMED_PROFILES menu; see tests/test_entrypoints.py).
# Per-protocol:
iaiops-mcp-opcua = "mcp_server.entrypoints:main_opcua"
iaiops-mcp-modbus = "mcp_server.entrypoints:main_modbus"
iaiops-mcp-s7 = "mcp_server.entrypoints:main_s7"
iaiops-mcp-mc = "mcp_server.entrypoints:main_mc"
iaiops-mcp-eip = "mcp_server.entrypoints:main_eip"
iaiops-mcp-mtconnect = "mcp_server.entrypoints:main_mtconnect"
iaiops-mcp-sparkplug = "mcp_server.entrypoints:main_sparkplug"
iaiops-mcp-ethercat = "mcp_server.entrypoints:main_ethercat"
iaiops-mcp-secsgem = "mcp_server.entrypoints:main_secsgem"
iaiops-mcp-profinet = "mcp_server.entrypoints:main_profinet"
iaiops-mcp-iec104 = "mcp_server.entrypoints:main_iec104"
iaiops-mcp-dnp3 = "mcp_server.entrypoints:main_dnp3"
iaiops-mcp-iec61850 = "mcp_server.entrypoints:main_iec61850"
iaiops-mcp-bacnet = "mcp_server.entrypoints:main_bacnet"
iaiops-mcp-hart = "mcp_server.entrypoints:main_hart"
# Per-edition named profiles:
iaiops-mcp-fab = "mcp_server.entrypoints:main_fab"
iaiops-mcp-factory = "mcp_server.entrypoints:main_factory"
iaiops-mcp-process = "mcp_server.entrypoints:main_process"
iaiops-mcp-energy = "mcp_server.entrypoints:main_energy"
iaiops-mcp-building = "mcp_server.entrypoints:main_building"

[tool.hatch.build.targets.wheel]
packages = ["iaiops", "mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Vendored, machine-generated Eclipse Tahu Sparkplug B protobuf module — kept
# byte-for-byte as generated by protoc; never hand-edited, so exclude from lint.
extend-exclude = ["iaiops/connectors/sparkplug/sparkplug_b_pb2.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# Vendored governance harness — kept faithful to its source; the exception
# names (PolicyDenied/BudgetExceeded) and long lines are intentional.
"iaiops/core/governance/*.py" = ["E501", "N818"]
# MCP server files are reflected by FastMCP/Pydantic; PEP 604 unions (X | None)
# crash on older mcp/pydantic, so they intentionally use Optional[X].
"mcp_server/**/*.py" = ["UP007", "UP045"]
# The MCP entry keeps an explicit Python-version guard.
"iaiops/cli/_root.py" = ["UP036"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests (require a reachable OPC-UA server / Modbus device)",
]
